# ugv_slam

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
output/20250617212852/: trajectory.pb  tum_traj.csv
output/20250617213633/: trajectory.pb  tum_traj.csv
output/20250617213826/: trajectory.pb  tum_traj.csv
output/20250617214342/: trajectory.pb  tum_traj.csv
output/20250617215205/: trajectory.pb  tum_traj.csv
output/20250617215255/: trajectory.pb  tum_traj.csv
output/20250617215343/: trajectory.pb  tum_traj.csv
output/20250617215458/: trajectory.pb  tum_traj.csv
output/20250617215926/: tum_traj.csv
output/20250617220404/: trajectory.pb  tum_traj.csv
output/20250617220528/: trajectory.pb  tum_traj.csv
output/20250617220613/: trajectory.pb  tum_traj.csv
output/20250617220721/: trajectory.pb  tum_traj.csv
output/20250617221216/: trajectory.pb  tum_traj.csv
output/20250617221634/: trajectory.pb  tum_traj.csv
output/20250617221946/: trajectory.pb  tum_traj.csv
output/20250617222154/: trajectory.pb  tum_traj.csv
output/20250617222239/: trajectory.pb  tum_traj.csv
output/20250617222442/: trajectory.pb  tum_traj.csv
output/20250617223002/: tum_traj.csv
output/20250618171728/: trajectory.pb  tum_traj.csv
output/20250618171959/: trajectory.pb  tum_traj.csv
output/20250618172102/: trajectory.pb  tum_traj.csv
output/20250618172221/: tum_traj.csv
output/20250618172536/: trajectory.pb  tum_traj.csv
output/20250618172623/: trajectory.pb  tum_traj.csv
output/20250618172711/: trajectory.pb  tum_traj.csv
output/20250618173412/: trajectory.pb  tum_traj.csv
output/20250618173635/: tum_traj.csv
output/20250618173720/: trajectory.pb  tum_traj.csv
output/20250618195317/: trajectory.pb  tum_traj.csv
output/20250618195705/: trajectory.pb  tum_traj.csv
output/20250618195726/: trajectory.pb  tum_traj.csv
output/20250618200026/: trajectory.pb  tum_traj.csv
output/20250618200440/: trajectory.pb  tum_traj.csv
output/20250618200505/: trajectory.pb  tum_traj.csv
output/20250618201020/: trajectory.pb  tum_traj.csv
output/20250618201309/: trajectory.pb  tum_traj.csv
output/20250618201652/: trajectory.pb  tum_traj.csv
output/20250618202014/: trajectory.pb  tum_traj.csv
output/20250618202143/: trajectory.pb  tum_traj.csv
output/20250618202203/: trajectory.pb  tum_traj.csv
output/20250618202229/: trajectory.pb  tum_traj.csv
output/20250618202256/: trajectory.pb  tum_traj.csv
output/20250618202445/: trajectory.pb  tum_traj.csv
output/20250618203711/: trajectory.pb  tum_traj.csv
output/20250618203813/: trajectory.pb  tum_traj.csv
output/20250618203900/: trajectory.pb  tum_traj.csv
output/20250618203920/: trajectory.pb  tum_traj.csv
output/20250618204010/: trajectory.pb  tum_traj.csv
output/20250618204156/: trajectory.pb  tum_traj.csv
output/20250618204205/: trajectory.pb  tum_traj.csv
output/20250618204621/: trajectory.pb  tum_traj.csv
output/20250618204732/: trajectory.pb  tum_traj.csv
output/20250618204752/: trajectory.pb  tum_traj.csv
output/20250618204926/: trajectory.pb  tum_traj.csv
output/20250618205052/: trajectory.pb  tum_traj.csv
output/20250618205145/: trajectory.pb  tum_traj.csv
output/20250618205216/: trajectory.pb  tum_traj.csv
output/20250618205257/: trajectory.pb  tum_traj.csv
output/20250618205417/: trajectory.pb  tum_traj.csv
output/20250618205623/: trajectory.pb  tum_traj.csv
output/20250618205633/: trajectory.pb  tum_traj.csv
output/20250618205727/: trajectory.pb  tum_traj.csv
output/20250618210025/: trajectory.pb  tum_traj.csv
output/20250618210123/: trajectory.pb  tum_traj.csv
output/20250618210241/: trajectory.pb  tum_traj.csv
output/20250618210253/: trajectory.pb  tum_traj.csv
src/oakchina_vio_package_ros2/: CMakeLists.txt  package.xml
src/oakchina_vio_package_ros2/config/: custom_config.yaml
src/oakchina_vio_package_ros2/include/: carina_a1088.h
src/oakchina_vio_package_ros2/launch/: oakchina_vio.launch.py
src/oakchina_vio_package_ros2/lib/: libopencv_calib3d.so.4.2  libopencv_core.so.4.2
src/oakchina_vio_package_ros2/lib/aarch64/: libopencv_calib3d.so.4.2  libopencv_highgui.so.4.2  libopencv_imgcodecs.so.4.2
src/oakchina_vio_package_ros2/lib/x86_64/: libopencv_flann.so.4.2  libopencv_highgui.so.4.2
src/oakchina_vio_package_ros2/src/: main.cpp
(+167 files in other folders)
